# cmt3d

./: .gitignore  README.md  pyproject.toml
docs/: README.md  make.bat
docs/source/: api.rst  conf.py  index.rst
scripts/: M0.py  compare_events.py  fault_geometry.py  fix_events.py  get_events_to_compare.py  job.sh  mpi_inversion.py  ndc.py  ndc_correlations.py  optimization.py  optimize_rosen.py  pca.py  plot_frechet_section.py  plot_inv_dir.py  reykjanes_ridge.py  test_mpi_group.py  test_mpi_subset.py  window_test.py
scripts/data/: C201801230931A  input.yml  process.yml
scripts/data/events/: C201009071613A
src/cmt3d/: __init__.py  _version.py  azi_weights.py  cmt_catalog.py  constants.py  costgradhess.py  download_gcmt_catalog.py  download_waveforms_to_storage.py  eqpar.py  geo_weights.py  lune_utils.py  measurements.py  process_classifier.py  read_inventory.py  signal.py  snn.py  source.py  sourcedecomposition.py  stream_cost_win.py  stream_grad_frechet_win.py  stream_grad_hess_win.py  utils.py
src/cmt3d/ioi/: M0.py  __init__.py  cli.py  input.yml  measurements.py  process.yml  process_testing.yml  signal.py
src/cmt3d/viz/: binned_stats.py  catalog_plot_utils.py  catalog_utils.py  compare_catalogs.py  filter_windows.py  history.py  plot_basics.py  plot_catalog.py  plot_inversion_section.py  plot_quakes.py  scatter_hist.py  source_plot.py  utils.py
tests/: test_cmt_catalog.py  test_process_classifier.py  test_signal.py  test_source.py
tests/data/: CMTSOLUTION  testCMT
workflow/nnodes/: config.toml  input.yml  input_fix_depth_10.yml  input_hard_damping.yml
workflow/nnodes/download/: config.toml  job.bash  slurm.148728.e  slurm.148730.e  slurm.148732.e  slurm.148733.e  slurm.148734.e  slurm.148735.e  slurm.148736.e  slurm.148737.e  (+4 more)
(+49 files in other folders)
